// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a disabled icon button 1`] = `
<div>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root IconButton-root-132 iconButton IconButton-medium-138 IconButton-contained-133 Mui-disabled Mui-disabled"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-61 MuiButton-text Button-text-62 Button-textDarkBg-66 MuiButton-textPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-64"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders a flat button with icon on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiIconButton-root IconButton-root-192 iconButton IconButton-medium-198 IconButton-text-194 IconButton-textDark-195"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders a small icon button 1`] = `
<div>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root IconButton-root-112 iconButton IconButton-small-117 IconButton-contained-113"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an icon button 1`] = `
<div>
  <button
    aria-label="User"
    class="MuiButtonBase-root MuiIconButton-root IconButton-root-92 iconButton IconButton-medium-98 IconButton-contained-93"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an opaque outlined button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-41 MuiButton-outlined Button-opaqueOutlined-48 MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-44"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-21 MuiButton-outlined Button-outlinedDarkBg-27 MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-24"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders button with color props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-221 MuiButton-contained Button-contained-223 MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-224"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders button with component props 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root Button-root-201 MuiButton-contained Button-contained-203 MuiButton-containedPrimary"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label Button-label-204"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`Button component renders button with rest props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-241 MuiButton-contained Button-contained-243 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-244"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-1 MuiButton-contained Button-contained-3 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-4"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders with additional classes 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-161 MuiButton-contained Button-contained-163 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label Button-label-164"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
